// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="project-card-measure"
  data-key="security_rating"
>
  <div
    className="project-card-measure-inner"
  >
    <div
      className="project-card-measure-number"
    >
      <Measure
        className="spacer-right"
        metricKey="vulnerabilities"
        metricType="SHORT_INT"
        value="0"
      />
      <Rating
        value="1"
      />
    </div>
    <div
      className="project-card-measure-label-with-icon"
    >
      <IssueTypeIcon
        className="little-spacer-right text-bottom"
        query="vulnerabilities"
      />
      label
    </div>
  </div>
</div>
`;

exports[`renders: iconKey 1`] = `
<div
  className="project-card-measure"
  data-key="security_rating"
>
  <div
    className="project-card-measure-inner"
  >
    <div
      className="project-card-measure-number"
    >
      <Measure
        className="spacer-right"
        metricKey="vulnerabilities"
        metricType="SHORT_INT"
        value="0"
      />
      <Rating
        value="1"
      />
    </div>
    <div
      className="project-card-measure-label-with-icon"
    >
      <IssueTypeIcon
        className="little-spacer-right text-bottom"
        query="overriddenIconKey"
      />
      label
    </div>
  </div>
</div>
`;
